# unitree-go2-ros2

./: README.md
champ/champ_config/launch/: gazebo.launch.py
champ_teleop/: CMakeLists.txt  README.md  champ_teleop.py  package.xml
champ_teleop/launch/: teleop.launch.py
robots/: install_descriptions
robots/configs/go2_config/: CMakeLists.txt  package.xml
robots/configs/go2_config/config/gait/: gait.yaml
robots/configs/go2_config/config/ros_control/: ros_control.yaml
robots/configs/go2_config/launch/: bringup.launch.py  gazebo.launch.py  gazebo_velodyne.launch.py  navigate.launch.py  slam.launch.py
robots/descriptions/go2_description/: CMakeLists.txt  package.xml
robots/descriptions/go2_description/launch/: description.launch.py
robots/descriptions/go2_description/xacro/: gazebo.xacro  laser.xacro  leg.xacro  robot.xacro  robot_VLP.xacro  transmission.xacro  velodyne.xacro
